--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,7 @@
 ---
-
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Header from '../components/common/Header.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<Header />
+  <main>home</main>
 </Layout>
-
-<style>
-	
-</style>
