--- a/src/components/Specifications.astro
+++ b/src/components/Specifications.astro
@@ -21,7 +21,7 @@ import specifications from "../data/data.json";
     specifications.detallesMotocicleta.rendimiento.map((rendimiento) => (
       <>
         <hr class="border-gray-700" />
-        <div class="flex items-center justify-between">
+        <div class="flex lg:items-center lg:justify-between gap-3 lg:gap-0 lg:flex-row flex-col">
           <span class="text-white/50 uppercase text-xs"> Motor</span>
           <span class="font-bold text-sm">{rendimiento.motor}</span>
         </div>
