--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -7,7 +7,7 @@ import data from "../data/data.json";
     {data.detallesMotocicleta.modelo}
   </h1>
   <hr class="border-gray-700" />
-  <div class="flex gap-2">
+  <div class="grid lg:grid-cols-2 lg:gap-12 grid-cols-1 gap-4">
     <img src={data.detallesMotocicleta.fotos[0].image1} alt="image" />
     <img src={data.detallesMotocicleta.fotos[0].image2} alt="image" />
     <img src={data.detallesMotocicleta.fotos[0].image3} alt="image" />
