--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Motorcycle from "../components/Motorcycle.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Bluemotors - Tienda">
   <main class="mx-auto max-w-6xl lg:py-20 py-10 sm:px-6 lg:px-8">
     <Motorcycle
       name="Honda CBR600RR"
