--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -1,4 +1,5 @@
 ---
+import PopoverComponent from "../PopoverComponent";
 const navItems = [
     { name: "Home", href: "/", hasDropdown: true },
     { name: "Mega Menu", href: "/mega-menu", hasDropdown: true },
@@ -9,6 +10,8 @@ const navItems = [
 ---
 
 <header>
+    
+    
     <div class="bg-[#f8f8f8] hidden md:flex">
         <div class="container mx-auto gap-1 flex py-5 text-[#a5a6a5]">
             <svg
