--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ interface Props {
   title: string;
 }
 import Header from "../components/common/Header.astro";
-
+import SubNavs from "../components/SubNavsA";
 const { title } = Astro.props;
 ---
 
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header />
+    <SubNavs client:visible />
     <slot />
   </body>
 </html>
