--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,4 +50,9 @@ const { title } = Astro.props;
       Courier New,
       monospace;
   }
+  @media only screen and (max-width: 600px) {
+  body {
+    padding: 0 10px 0 10px;
+  }
+}
 </style>
