--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -1,21 +1,61 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Motorcycle from "../components/Motorcycle.astro";
+import ProductCard from "../components/ProductCard.astro";
+const response = await fetch("https://bluemotorsec.com/wp-json/wp/v2/media");
+const media = await response.json();
 ---
 
-<Layout title="Bluemotors - Tienda">
-  <main class="mx-auto max-w-6xl lg:py-20 py-10 sm:px-6 lg:px-8">
-    <Motorcycle
-      name="Honda CBR600RR"
-      description="Honda CBR600RR Motorcycle"
-      imageUrl="https://motors.stylemixthemes.com/motorcycles/wp-content/uploads/sites/5/2016/08/motorcycle-4-1110x577.jpg"
-      price={10000}
-      category="Motocicleta"
-      mileage="100,000 km"
-      engine="4.0L"
-      year="2022"
-      color="Negro"
-      vin="1G1A1B1C1D1E1F1G1H1I"
-    />
-  </main>
+<Layout title="Bluemotors - Inicio">
+  <div class="flex flex-col lg:flex-row justify-center gap-20">
+    <div>
+      <div class="my-[20px]">
+        <p class="font-medium mb-[10px] text-white">TOP RATED PRODUCTS</p>
+        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+      </div>
+      <div>
+        {
+          media.length > 0 ? (
+            media.map((item) => (
+              <>
+                <ProductCard
+                  details="Honda CBR600RR"
+                  price="580.00"
+                  image={item.source_url}
+                  alt={item.alt_text}
+                  id={item.id}
+                  stars={3}
+                />
+              </>
+            ))
+          ) : (
+            <p>No se encontraron imágenes.</p>
+          )
+        }
+      </div>
+    </div>
+    <div>
+      <div class="my-[20px]">
+        <p class="font-medium mb-[10px] text-white">SALE PRODUCTS</p>
+        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+      </div>
+      {
+        media.length > 0 ? (
+          media.map((item) => (
+            <>
+              <ProductCard
+                details="Honda CBR600RR"
+                price="580.00"
+                image={item.source_url}
+                alt={item.alt_text}
+                id={item.id}
+                stars={3}
+              />
+            </>
+          ))
+        ) : (
+          <p>No se encontraron imágenes.</p>
+        )
+      }
+    </div>
+  </div>
 </Layout>
