--- a/src/pages/producto/[id].astro
+++ b/src/pages/producto/[id].astro
@@ -2,18 +2,32 @@
 import Layout from "../../layouts/Layout.astro";
 import Motorcycle from "../../components/Motorcycle.astro";
 
-export async function getStaticPaths() {
-  return [{ params: { id: "1" } }];
-}
 const { id } = Astro.params;
+
+export async function getStaticPaths() {
+  const response = await fetch(
+    "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
+  );
+  const media = await response.json();
+
+  const paths = media.map((item) => ({
+    params: {
+      id: item.id.toString(),
+    },
+  }));
+
+  return {
+    paths,
+    fallback: false,
+  };
+}
 const response = await fetch(
-  `https://bluemotorsec.com/wp-json/wp/v2/media/${id}`
+  `https://bluemotorsec.com/wp-json/wp/v2/productos-tienda/${id}`
 );
 const media = await response.json();
 ---
 
 <Layout title="BlueMotors">
-  <h1>Producto {id}</h1>
   <main class="mx-auto max-w-6xl lg:py-20 py-10 sm:px-6 lg:px-8">
     <Motorcycle
       name={media.type}
@@ -28,4 +42,4 @@ const media = await response.json();
       vin="1G1A1B1C1D1E1F1G1H1I"
     />
   </main>
-</Layout>
+</Layout>; ---
