Update Connection Wordpress

--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -3,7 +3,7 @@ const { image, details, price, id } = Astro.props;
 ---
 
 <a
-  href={`/products/${id}`}
+  href={`/producto/123`}
   class="relative
                         after:content-[''] after:bg-red-dark after:h-[0%] after:w-[3px] after:bottom-[10%] after:-left-[20px] after:rounded-x1 after:absolute after:duration-300
                         after:hover:h-[80%]
