--- a/src/pages/producto/[id].astro
+++ b/src/pages/producto/[id].astro
@@ -1,45 +1,51 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Motorcycle from "../../components/Motorcycle.astro";
+import productData from "../../data/data.json";
 
 const { id } = Astro.params;
 
 export async function getStaticPaths() {
-  const response = await fetch(
-    "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
-  );
-  const media = await response.json();
+  // const response = await fetch(
+  //   "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
+  // );
+  // const media = await response.json();
 
-  const paths = media.map((item) => ({
-    params: {
-      id: item.id.toString(),
-    },
-  }));
+  // const paths = media.map((item) => ({
+  //   params: {
+  //     id: item.id.toString(),
+  //   },
+  // }));
 
-  return {
-    paths,
-    fallback: false,
-  };
+  // return {
+  //   paths,
+  //   fallback: false,
+  // };
+
+  return [
+    { params: {id: "123"} },
+  ]
 }
-const response = await fetch(
-  `https://bluemotorsec.com/wp-json/wp/v2/productos-tienda/${id}`
-);
-const media = await response.json();
+const producto = productData.detallesMotocicleta;
+// const response = await fetch(
+//   `https://bluemotorsec.com/wp-json/wp/v2/productos-tienda/${id}`
+// );
+// const media = await response.json();
 ---
 
-<Layout title="BlueMotors">
+<Layout title={`BlueMotors - ${producto.modelo}`}>
   <main class="mx-auto max-w-6xl lg:py-20 py-10 sm:px-6 lg:px-8">
     <Motorcycle
-      name={media.type}
-      description="Honda CBR600RR Motorcycle"
-      imageUrl="https://motors.stylemixthemes.com/motorcycles/wp-content/uploads/sites/5/2016/08/motorcycle-4-1110x577.jpg"
+      name={producto.modelo}
+      description={producto.descripcion}
+      imageUrl={producto.fotos[0].image1}
       price={10000}
       category="Motocicleta"
       mileage="100,000 km"
-      engine="4.0L"
+      engine={producto.rendimiento[0].motor}
       year="2022"
-      color="Negro"
-      vin="1G1A1B1C1D1E1F1G1H1I"
+      color={producto.tipoModelo}
+      vin={producto.numeroVin}
     />
   </main>
 </Layout>; ---
