--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -17,5 +17,6 @@ const { image, details, price, id } = Astro.props;
     <div class="details hover:text-red-dark">{details}</div>
     <div class="relative"></div>
     <div class="price">${price}</div>
+    <div></div>
   </div>
 </a>
