--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,8 +51,8 @@ const { title } = Astro.props;
       monospace;
   }
   @media only screen and (max-width: 600px) {
-  body {
-    padding: 0 10px 0 10px;
+    body {
+      padding: 0 0 0 0;
+    }
   }
-}
 </style>
