--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,6 +1,6 @@
 ---
 import data from "../data/data.json";
-const { id, open } = Astro.props;
+const { motorcycle } = Astro.props;
 ---
 
 <div class="space-y-5">
@@ -9,9 +9,9 @@ const { id, open } = Astro.props;
   </h1>
   <hr class="border-gray-700" />
   <div class="grid lg:grid-cols-2 lg:gap-12 grid-cols-1 gap-4">
-    <img src={data.detallesMotocicleta.fotos[0].image1} alt="image" />
-    <img src={data.detallesMotocicleta.fotos[0].image2} alt="image" />
-    <img src={data.detallesMotocicleta.fotos[0].image3} alt="image" />
+    <img src={motorcycle.imagen_principal} alt="image" />
+    <img src={motorcycle.imagen_2} alt="image" />
+    <img src={motorcycle.imagen_3} alt="image" />
   </div>
 
   {
