--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,73 @@
 ---
+import "../styles/main.css";
 import Layout from "../layouts/Layout.astro";
+import ProductCard from "../components/ProductCard.astro";
+const response = await fetch(
+  "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
+);
+const productos = await response.json();
+import { extractImageUrl } from "../utils/image";
 ---
 
-
 <Layout title="Bluemotors - Inicio">
-  <main>home</main>
+  <div
+    class="lg:h-screen overflow-x-hidden flex flex-col lg:flex-row justify-center gap-20 lg:p-16"
+    style="background-image: url('https://azwecdnepstoragewebsiteuploads.azureedge.net/PHO_STAGE_KTM-250-SX-Adamo-Edition-Stage_%23SALL_%23AEPI_%23V1.png');"
+  >
+    <h1 class="text-white text-center text-[100px] font-sans">Bluemotors</h1>
+  </div>
+  <div
+    class="flex
+    flex-col
+    lg:flex-row
+    justify-center
+    gap-20
+    lg:p-16"
+  >
+    <div>
+      <div class="my-[20px] lg:pl-8 pl-4">
+        <p class="font-medium mb-[10px] text-white">TOP RATED PRODUCTS</p>
+        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+      </div>
+      <div>
+        {
+          productos.map((item, index) => {
+            const imageUrl = extractImageUrl(item.content.rendered);
+            return (
+              <ProductCard
+                details={item.acf.nombre}
+                price={item.acf.precio}
+                id={item.id}
+                description={item.acf.descripcion}
+                image={item.acf.imagen_principal}
+                alt={item.modelo}
+              />
+            );
+          })
+        }
+      </div>
+    </div>
+
+    <div>
+      <div class="my-[20px] lg:pl-8 pl-4">
+        <p class="font-medium mb-[10px] text-white">SALE PRODUCTS</p>
+        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+      </div>
+      {
+        productos.map((item, index) => (
+          <ProductCard
+            details={item.acf.nombre}
+            id={item.id}
+            price={item.acf.precio}
+            description={item.acf.descripcion}
+            image={
+              item.acf.imageUrl ||
+              "https://img.freepik.com/premium-psd/isolated-white-sport-bike-from-left-front-view_16145-365.jpg?w=996"
+            }
+            alt={item.modelo}
+          />
+        ))
+      }
+    </div>
+  </div>
 </Layout>
