--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,19 +2,31 @@
 import "../styles/main.css";
 import Layout from "../layouts/Layout.astro";
 import ProductCard from "../components/ProductCard.astro";
+import { extractImageUrl } from "../utils/image";
+import "animate.css";
 const response = await fetch(
   "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
 );
 const productos = await response.json();
-import { extractImageUrl } from "../utils/image";
 ---
 
 <Layout title="Bluemotors - Inicio">
   <div
-    class="lg:h-screen overflow-x-hidden flex flex-col lg:flex-row justify-center gap-20 lg:p-16"
-    style="background-image: url('https://azwecdnepstoragewebsiteuploads.azureedge.net/PHO_STAGE_KTM-250-SX-Adamo-Edition-Stage_%23SALL_%23AEPI_%23V1.png');"
+    class="lg:h-screen overflow-x-hidden flex flex-col lg:flex-row p-10 animate__animated animate__fadeInLeft"
+    style=" background-image: url('https://azwecdnepstoragewebsiteuploads.azureedge.net/PHO_STAGE_KTM-250-SX-Adamo-Edition-Stage_%23SALL_%23AEPI_%23V1.png');"
   >
-    <h1 class="text-white text-center text-[100px] font-sans">Bluemotors</h1>
+    <div class="space-y-10 mt-80">
+      <h1 class="text-white text-[50px] font-sans w-2/3">
+        ¡Siente el rugido, vive la pasión de las motos!
+      </h1>
+      <div>
+        <button
+          class="bg-red-dark py-4 px-8 text-white text-center text-[20px] hover:opacity-70"
+        >
+          <a href="/productos">Ver Tienda</a>
+        </button>
+      </div>
+    </div>
   </div>
   <div
     class="flex
