--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -4,30 +4,23 @@ import Layout from "../layouts/Layout.astro";
 import ProductCard from "../components/ProductCard.astro";
 import { extractImageUrl } from "../utils/image";
 import "animate.css";
+import Carousel from "../components/Carousel.astro";
+
 const response = await fetch(
   "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
 );
 const productos = await response.json();
 ---
 
-<Layout title="Bluemotors - Inicio">
-  <div
-    class="lg:h-screen overflow-x-hidden flex flex-col lg:flex-row p-10 animate__animated animate__fadeInLeft"
-    style=" background-image: url('https://azwecdnepstoragewebsiteuploads.azureedge.net/PHO_STAGE_KTM-250-SX-Adamo-Edition-Stage_%23SALL_%23AEPI_%23V1.png');"
-  >
-    <div class="space-y-10 mt-80">
-      <h1 class="text-white text-[50px] font-sans w-2/3">
-        ¡Siente el rugido, vive la pasión de las motos!
-      </h1>
-      <div>
-        <button
-          class="bg-red-dark py-4 px-8 text-white text-center text-[20px] hover:opacity-70"
-        >
-          <a href="/tienda">Ver Tienda</a>
-        </button>
-      </div>
-    </div>
+<Layout title="Bluemotors - Tienda">
+  <div class="p-10">
+    <h1 class="text-white lg:text-[50px] text-3xl font-sans lg:w-2/3">
+      Encuentra tu moto favorita
+    </h1>
   </div>
+
+  <Carousel />
+
   <div
     class="flex
     flex-col
