Hybrid Rendering enabled

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import "../styles/main.css";
 import Layout from "../layouts/Layout.astro";
 import ProductCard from "../components/ProductCard.astro";
@@ -44,7 +45,6 @@ const productos = await response.json();
       <div>
         {
           productos.map((item, index) => {
-            const imageUrl = extractImageUrl(item.content.rendered);
             return (
               <ProductCard
                 details={item.acf.nombre}
@@ -72,10 +72,7 @@ const productos = await response.json();
             id={item.id}
             price={item.acf.precio}
             description={item.acf.descripcion}
-            image={
-              item.acf.imageUrl ||
-              "https://img.freepik.com/premium-psd/isolated-white-sport-bike-from-left-front-view_16145-365.jpg?w=996"
-            }
+            image={item.acf.imagen_principal}
             alt={item.modelo}
           />
         ))
