--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import "../styles/main.css";
 import Layout from "../layouts/Layout.astro";
 import ProductCard from "../components/ProductCard.astro";
