hybrid on each product page

--- a/src/pages/producto/[id].astro
+++ b/src/pages/producto/[id].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import Motorcycle from "../../components/Motorcycle.astro";
 import Layout from "../../layouts/Layout.astro";
 
